--- a/godechain-front/public/index.html
+++ b/godechain-front/public/index.html
@@ -38,6 +38,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    
+        <!-- github ribbon style: https://github.com/simonwhitaker/github-fork-ribbon-css -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css" />
+        <link rel="stylesheet" href="%PUBLIC_URL%/assets/main.css" />
+        <title>Godechain</title>
   </body>
 </html>
